nginx/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hoge-virtual-service
spec:
  hosts:
  - "127.0.0.1"
  gateways:
  - hoge-ingress-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: hoge-service
        port:
          number: 80
